welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:7: error: reassignment to val
	{prendBiscuit;nbBSR = nbBSR - 1;}
                            ^